UPDATE ensure ellipsis is aligned in the cnter baseline of components if they need it

--- a/app/styles/components/ellipsis.css
+++ b/app/styles/components/ellipsis.css
@@ -8,6 +8,7 @@
 .ellipsis span {
   width: 0.4em;
   height: 0.4em;
+  align-self: center;
   border-radius: 50%;
   background-color: currentColor;
   display: inline-block;
